--- a/GYM/Proto_Broker/Cargo.toml
+++ b/GYM/Proto_Broker/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2021"
 
 [dependencies]
 regex = "1"
+[dependencies.uuid]
+version = "1.2.2"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
