--- a/GYM/Proto_Broker/Cargo.toml
+++ b/GYM/Proto_Broker/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 regex = "1"
+hex = "0.4.3"
+bincode = "2.0.0-rc.2"
 [dependencies.uuid]
 version = "1.2.2"
 features = [
