new get id for client on connect

--- a/GYM/Proto_Broker/Cargo.toml
+++ b/GYM/Proto_Broker/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 regex = "1"
 hex = "0.4.3"
 bincode = "2.0.0-rc.2"
+rand = "0.8.5"
 [dependencies.uuid]
 version = "1.2.2"
 features = [
