--- a/AsyncBroker/Cargo.toml
+++ b/AsyncBroker/Cargo.toml
@@ -13,6 +13,8 @@ hex = "0.4.3"
 bincode = "2.0.0-rc.2"
 rand = "0.8.5"
 try-catch = "0.2.2"
+toml = "0.7.2"
+serde = { version = "1.0.152" , features = ["derive"] }
 [dependencies.uuid]
 version = "1.2.2"
 features = [
