--- a/async_broker_messages/Cargo.toml
+++ b/async_broker_messages/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.8.5"
 try-catch = "0.2.2"
 toml = "0.7.2"
 serde = { version = "1.0.152" , features = ["derive"] }
+bytes = "1.4.0"
 [dependencies.uuid]
 version = "1.2.2"
 features = [
