--- a/async_broker_messages/Cargo.toml
+++ b/async_broker_messages/Cargo.toml
@@ -16,6 +16,7 @@ try-catch = "0.2.2"
 toml = "0.7.2"
 serde = { version = "1.0.152" , features = ["derive"] }
 bytes = "1.4.0"
+lazy_static = "1.4.0"
 [dependencies.uuid]
 version = "1.2.2"
 features = [
