--- a/async_broker_messages/Cargo.toml
+++ b/async_broker_messages/Cargo.toml
@@ -3,6 +3,9 @@ name = "async_broker_messages"
 version = "0.3.0"
 edition = "2021"
 
+[profile.release]
+debug = 1
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
